Fixing the name spacing

--- a/main.css
+++ b/main.css
@@ -14,6 +14,11 @@ body {
 
 }
 
+header {
+    padding-top: 23%;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
 
 .buttons {
     vertical-align: top;
